🎨 : Change name button

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div id="counter" class="counter">0</div>
 
       <!-- Tombol untuk menambah angka -->
-      <button id="add-button" class="btn btn-primary">Tambah+</button>
+      <button id="add-button" class="btn btn-primary">Tambah ++</button>
 
       <!-- Tabel untuk menampilkan data -->
       <table class="table mt-4">
